blueprint final report overview in

--- a/vignettes/blueprint-final-report.Rmd
+++ b/vignettes/blueprint-final-report.Rmd
@@ -48,11 +48,13 @@ In our [initial report](https://mrc-ide.github.io/helios/articles/blueprint.html
 
 # Summary of Key Results {#changes}
 
--   Quote the 10% coverage and 80% efficacy results for random and targeted far UVC strategies.
+-   Far UVC deployment to cover a random 10% of total location area led to average reductions in annual infection incidence of X% for an endemic "Influenza-like" pathogen, and Y% for an endemic "SARS-CoV-2-like" pathogen. Targeting far UVC to the riskiest locations increased this impact by Ax and Bx respectively.
 
--   Highlight random vs targeted riskiness strategy differences.
+-   In general, targeting far UVC deployment to locations based on riskiness had the highest relative impact when coverage of space was low. Increasing far UVC coverage led to increasing overlap of the spaces covered between random and targeted strategies, and a diminished difference between the two strategies in terms of impact.
 
--   Highlight difference in impact between SARS-CoV-2 and Influenza (R0-driven).
+-   Far UVC deployment had a relatively higher impact on transmission of the "Influenza-like" pathogen than on the "SARS-CoV-2-like" pathogen (though impact in the latter was not negligible). This arises from the differences in their respective $R_0$ values (\~1.35 and \~2.5 respectively), and the non-linear nature by which reductions in transmission affect epidemic dynamics at different starting $R_0$ values.
+
+-   Far UVC deployment to cover a random 10% of total location area led to average reductions in epidemic final size of X% for an epidemic "Influenza-like" pathogen, and Y% for an epidemic "SARS-CoV-2-like" pathogen.
 
 # Model Changes
 
@@ -368,11 +370,10 @@ ggplot() +
 
 Our results highlight the impact that deployment of far UVC could have in reducing disease transmission across a range of pathogen archetypes and disese metrics. Targeting the deployment of far UVC towards the riskiest locations provided additional reductions in epidemic size and speed, but appreciable reductions were still observed when far UVC was installed at random and reductions in performance relative to targeted deployment could generally be overcome with increased efficacy and coverage. Far UVC deployment typically had a greater relative impact on the control of an "Influenza-Like" pathogen than the "SARS-CoV-2-Like" pathogen considered in our analyses.
 
-For the "Influenza-like" pathogen archetype (approximate $R_0$ of 1.35), targeted installation of far UVC at very high coverage and efficacy ($\geq$ 80%) achieved complete suppression in the epidemic instance (i.e. reduced R \< 1 and prevented the pathogen from spreading from low initial frequency). This was not achieved under any circumstances for the "SARS-CoV-2-like" pathogen archetype (approximate $R_0$ of 2.5). However, far UVC provided significant value in the epidemic scenarios even when it does not achieve complete suppression of the epidemic, as measured by the range of metrics considered in this report. Reductions in transmission that fall short of full suppression arising from far UVC can still reduce the associated pressure on healthcare systems by reducing the peak size (and therefore burden) on the healthcare system, and spreading that burden out over time - the so-called "flattening of the curve"). Delaying the epidemic peak also provides more time for other medical countermeasures, such as vaccines, to be developed. Furthermore, for the same disease burden, flattening the curve enables shorter and less stringent non-pharmaceutical interventions to be implemented relative to scenarios in which far UVC is not available. 
+For the "Influenza-like" pathogen archetype (approximate $R_0$ of 1.35), targeted installation of far UVC at very high coverage and efficacy ($\geq$ 80%) achieved complete suppression in the epidemic instance (i.e. reduced R \< 1 and prevented the pathogen from spreading from low initial frequency). This was not achieved under any circumstances for the "SARS-CoV-2-like" pathogen archetype (approximate $R_0$ of 2.5). However, far UVC provided significant value in the epidemic scenarios even when it does not achieve complete suppression of the epidemic, as measured by the range of metrics considered in this report. Reductions in transmission that fall short of full suppression arising from far UVC can still reduce the associated pressure on healthcare systems by reducing the peak size (and therefore burden) on the healthcare system, and spreading that burden out over time - the so-called "flattening of the curve"). Delaying the epidemic peak also provides more time for other medical countermeasures, such as vaccines, to be developed. Furthermore, for the same disease burden, flattening the curve enables shorter and less stringent non-pharmaceutical interventions to be implemented relative to scenarios in which far UVC is not available.
 
-In the context of an endemic pathogen, installation of far UVC to a random 10% of location space led to average reductions of approximately X% and Y% for the "Influenza-like" and "SARS-CoV-2-like" archetypes respectively. The increased impact of far UVC on the "Influenza-like" pathogen (something also observed in the epidemic scenarios) is primarily dirven by differences in the starting $R_0$ of each pathogen (~1.35 for "Influenza-like" and ~2.5 for "SARS-CoV-2-Like"). In general, there is a non-linear influence of $R_{0}$ on the final size of an epidemic (for an epidemic pathogen) and the average prevalence of infection (in the case of an persistently endemic pathogen). For lower values of $R_{0}$ which are near to the critical threshold of $R_0=1$, small increases to $R_0$ translate to (relatively) large increases in the above quantities. At higher values of $R_{0}$ however, saturation occurs (e.g. the final size of an epidemic with robust and sterilising immunity post infection can never be >100%) and the rate at which increasing values of $R_0$ increases infection prevalence or epidemic final size diminishes. By the same logic, when $R_0$ is high (as for the "SARS-CoV-2-Like" archetype), small reductions in $R_0$ (e.g. due to far UVC) will have only a slight impact on infection prevalence or epidemic final size. By contrast, when baseline $R_0$ is lower (as for the "Influenza-Like" archetype"), the infection prevalence (or final epidemic size) will decrease more (in relative terms) for the same (relative) reduction in $R_0$.
+In the context of an endemic pathogen, installation of far UVC to a random 10% of location space led to average reductions of approximately X% and Y% for the "Influenza-like" and "SARS-CoV-2-like" archetypes respectively. The increased impact of far UVC on the "Influenza-like" pathogen (something also observed in the epidemic scenarios) is primarily dirven by differences in the starting $R_0$ of each pathogen (\~1.35 for "Influenza-like" and \~2.5 for "SARS-CoV-2-Like"). In general, there is a non-linear influence of $R_{0}$ on the final size of an epidemic (for an epidemic pathogen) and the average prevalence of infection (in the case of an persistently endemic pathogen). For lower values of $R_{0}$ which are near to the critical threshold of $R_0=1$, small increases to $R_0$ translate to (relatively) large increases in the above quantities. At higher values of $R_{0}$ however, saturation occurs (e.g. the final size of an epidemic with robust and sterilising immunity post infection can never be \>100%) and the rate at which increasing values of $R_0$ increases infection prevalence or epidemic final size diminishes. By the same logic, when $R_0$ is high (as for the "SARS-CoV-2-Like" archetype), small reductions in $R_0$ (e.g. due to far UVC) will have only a slight impact on infection prevalence or epidemic final size. By contrast, when baseline $R_0$ is lower (as for the "Influenza-Like" archetype"), the infection prevalence (or final epidemic size) will decrease more (in relative terms) for the same (relative) reduction in $R_0$.
 
-Our results also highlight that the added value of targeting far UVC coverage based on riskiness (rather than at random) is greatest when the total percentage of covered space is low (e.g. 10% considered in the analyses presented in this report). As the proportion of space covered increases, there is increasing convergence between the two strategies (as a greater number of total spaces are covered). At 100% coverage, the two strategies are identical. Our results suggest that in instances where only a low fraction of spaces are likely to be covered (for instance during initial adoption of the technology), the value of information that enables installation to be targeted at the riskiest spaces is likely to be substantial. 
-
+Our results also highlight that the added value of targeting far UVC coverage based on riskiness (rather than at random) is greatest when the total percentage of covered space is low (e.g. 10% considered in the analyses presented in this report). As the proportion of space covered increases, there is increasing convergence between the two strategies (as a greater number of total spaces are covered). At 100% coverage, the two strategies are identical. Our results suggest that in instances where only a low fraction of spaces are likely to be covered (for instance during initial adoption of the technology), the value of information that enables installation to be targeted at the riskiest spaces is likely to be substantial.
 
 # Bibliography {.unnumbered}
